# 4p-hackason-3D-camera

./: .gitignore  README.md  autozoom.py  common.py
3d-kern-burns/: README.md  adjust_pose.py  autozoom.py  common.py
3d-kern-burns/3rd-library/d2c/: 3d_camera_demo.py.back  CMakeLists.txt  d2cSwapper.cpp  depth_to_color.h
3rd-library/d2c/: 3d_camera_demo.py  CMakeLists.txt  CameraWrapper.cpp  CameraWrapper.h  depth.npy
depth-camera/: autozoom.py
depth-camera/3rd-library/d2c/: AstraD2C.cpp  AstraD2C.h  Draw.cpp  Draw.h  d2cSwapper.h
multi-views/: .gitmodules  README.md  format_imgs.py  load_llff.py  metric.py  run_nerf.py  run_nerf_helpers.py  visualization_nerf.py
multi-views/configs/4paradigm/: cloth.txt  coffee.txt  doll.txt  door.txt  plant.txt
multi-views/data/4paradigm/coffee/: colmap_output.txt  poses_bounds.npy
multi-views/data/4paradigm/coffee/sparse/0/: project.ini
